Added Creative Common license to the deck

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                         <small>Created by <a href="https://github.com/jdigger/">Jim Moore</a> / <a href="http://twitter.com/jdiggerj">@jdiggerj</a></small>
                     </p>
                     <p><img src="images/Git-Logo-2Color.png" class="git-logo"/></p>
+                    <p style="font-size: 15px; "><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Git Made Simple</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Jim J. Moore</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/jdigger/git-fundimentals-preso" rel="dct:source">https://github.com/jdigger/git-fundimentals-preso</a>.</p>
                 </section>
 
 
