Fix some attribution hrefs

--- a/index.html
+++ b/index.html
@@ -1037,10 +1037,10 @@ e0012413fb1c0728dc1d9b86c9b074dfc24a220a</div>
                         <li>Linus Torvalds - <a href="https://commons.wikimedia.org/wiki/File:LinuxCon_Europe_Linus_Torvalds_03.jpg">Wikimedia Commons</a></li>
                         <li>plumbing - <a href="http://en.wikipedia.org/wiki/Piping_and_plumbing_fitting#mediaviewer/File:Robinetterie-raccords.JPG">Wikimedia Commons</a></li>
                         <li>sink - <a href="http://pixabay.com/en/sink-bowl-faucet-porcelain-tap-335747/">Pixabay.com</a></li>
-                        <li>I Got A Fever - <a href="http://asylumactas.deviantart.com/art/More-Cowbell-194241861"></a>AsylumActas on DeviantArt</li>
+                        <li>I Got A Fever - <a href="http://asylumactas.deviantart.com/art/More-Cowbell-194241861">AsylumActas on DeviantArt</a></li>
                         <li>More Cowbell GIF - <a href="http://gifsoup.com/view/4392785/more-cowbell.html">GIFSoup</a></li>
-                        <li>Arrow in the Gold - <a href="https://openclipart.org/detail/20596/arrow-in-the-gold"></a>OpenClipart</li>
-                        <li>Raindow Dash with Armor Commander Hurricane - <a href="http://pegasi-pony.deviantart.com/art/Raindow-Dash-with-Armor-Commander-Hurricane-Vector-274592028"></a>Pegasi-pony on DeviantArt</li>
+                        <li>Arrow in the Gold - <a href="https://openclipart.org/detail/20596/arrow-in-the-gold">OpenClipart</a></li>
+                        <li>Raindow Dash with Armor Commander Hurricane - <a href="http://pegasi-pony.deviantart.com/art/Raindow-Dash-with-Armor-Commander-Hurricane-Vector-274592028">Pegasi-pony on DeviantArt</a></li>
                         <li>Ugh As If - <a href="http://www.redbubble.com/people/pearl-paradise/works/13633522-ugh-as-if">RedBubble</a></li>
                         <li>Same and Different Ponies - <a href="http://www.mtv.com/news/2625537/my-little-pony-toy-review/">MTV</a></li>
                         <li>Epic Ponies - <a href="https://imgur.com/gallery/4QeW49x">Imgur - Bropez</a></li>
